--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,23 @@
-* {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
     --primary: #2E2E2E;
+    --secondary: rgb(143, 143, 143);
     --bg: #F6F8FF;
 }
 
-body {
+* {
+    box-sizing: border-box;
     margin: 0;
-    font-family: sans-serif;
+    padding: 0;
+    -webkit-font-smoothing: antialiased;
+}
+
+body {
     background-color: var(--bg);
+    color: var(--primary);
+    font-family: 'Montserrat', sans-serif;
+    overflow-y: hidden;
 }
 
 input, 
@@ -19,3 +25,68 @@ button,
 textarea {
     font-size: inherit;
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: var(--secondary)
+}
+
+h1 {
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+
+h2 {
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.section {
+    padding:0 5px;
+    margin-bottom: 20px;
+}
+
+.image-fluid {
+    width: 100%;
+    height: 100%;
+  }
+
+/* Header */
+header {
+    background-color: var(--primary);
+    color: var(--bg);
+    height: 60px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    position: fixed;
+}
+header h1,
+header nav
+ {
+    display: flex;
+    width: 100%;
+    align-self: center;
+    justify-content: space-between;
+}
+
+/* Me Section */
+.section-me {
+    padding-top: 75px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.section-me img {
+    border-radius: 100px 100px 0% 100px;
+    width: 50%;
+    padding-right:25px;
+}
+
+/* Skills section */
