--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ h2 {
     margin-bottom: 10px;
 }
 
-.section {
+.container {
     padding:0 5px;
     margin-bottom: 20px;
 }
@@ -55,6 +55,8 @@ h2 {
     width: 100%;
     height: 100%;
   }
+
+
 
 /* Header */
 header {
@@ -90,3 +92,25 @@ header nav
 }
 
 /* Skills section */
+.skills-container {
+    width: 100%;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;  
+}
+
+.skills {
+    text-align: center;
+    margin-bottom: 5px;
+    /* border: 1px solid black; */
+}
+
+.skills-first-layer {
+    width: 25%;
+}
+.skills-second-layer {
+    width: 33%;
+}
+.skills-third-layer {
+    width: 50%;
+}
