--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,7 @@ h2 {
 
 /* generic class stylings */
 .container {
-    padding:0 5px;
+    padding: 0 max(calc((100vw - 1300px) / 2 ), 10px);
     margin-bottom: 20px;
 }
 
@@ -66,7 +66,7 @@ h2 {
   }
 
 
-  /* =================
+/* =================
     SECTIONS
 ================= */
 
