--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,8 +2,9 @@
 
 :root {
     --primary: #2E2E2E;
-    --secondary: rgb(143, 143, 143);
+    --secondary: #E5E5E5;
     --bg: #F6F8FF;
+    --hover: #A8BBFF;
 }
 
 /* =================
@@ -38,7 +39,7 @@ a {
 }
 
 a:hover {
-    color: var(--secondary)
+    color: var(--hover)
 }
 
 h1 {
@@ -125,7 +126,7 @@ header nav
     width: 100%;
 }
 .second-layer {
-    width: 75%;
+    width: 90%;
 }
 .third-layer {
     width: 50%;
@@ -148,4 +149,64 @@ header nav
 
 .bio-section p {
     margin-bottom: 10px;
+}
+
+/* Socials section */
+.socials-container {
+    display: flex;
+}
+
+.socials-container a{
+    width: 33.333%;
+    display: flex;
+    align-items: center;
+}
+
+
+
+.logo {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    border: solid 1px var(--primary);
+    display: inline-block;
+    margin-right: 5px;
+    background-size: cover;
+}
+
+.git-logo {
+    background-image: url("../assets/images/git.png");
+}
+.codepen-logo {
+    background-image: url("../assets/images/codepen.png");
+}
+.linkedin-logo {
+    background-image: url("../assets/images/linkedin.png");
+}
+
+.contact-container {
+    margin-top: 30px;
+    padding: 20px 20px;
+    background: var(--secondary);
+}
+
+.contact-container h3{
+    margin-bottom: 15px;
+}
+
+.contact-container div {
+    margin-bottom: 10px;
+}
+
+.contact-entry {
+    display: flex;
+    align-items: center;
+}
+
+.contact-entry i {
+    margin-right: 8px;
+}
+
+.contact-entry:hover i {
+    color: var(--hover);
 }
