--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
     --primary: #2E2E2E;
     --secondary: #E5E5E5;
     --bg: #F6F8FF;
-    --hover: #A8BBFF;
+    --hover: #81E070;
 }
 
 /* =================
@@ -37,7 +37,10 @@ a {
     text-decoration: none;
     color: inherit;
     font-weight: 500;
-    transition: transform 0.3s ease-in-out ;
+    -webkit-transition: transform 0.3s ease-in-out, color 0.15s ease-in-out;
+    -moz-transition: transform 0.3s ease-in-out, color 0.15s ease-in-out;
+    -o-transition: transform 0.3s ease-in-out, color 0.15s ease-in-out;
+    transition: transform 0.3s ease-in-out, color 0.15s ease-in-out;
 }
 
 a:hover {
@@ -186,6 +189,13 @@ header nav
 
 .bio-section p {
     margin-bottom: 10px;
+}
+
+.bio-section p a {
+    font-weight: 600;
+}
+.bio-section p a:hover {
+    transform: scale(1);
 }
 
 /* Socials section */
