--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,11 @@ h2 {
     margin-bottom: 10px;
 }
 
+h3 {
+    font-size: 1.625rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
 /* ... */
 
 
@@ -213,7 +218,7 @@ header nav
 
 .logo {
     border-radius: 50%;
-    width: 40px;
+    min-width: 40px;
     height: 40px;
     border: solid 1px var(--primary);
     display: inline-block;
@@ -231,14 +236,20 @@ header nav
     background-image: url("../assets/images/linkedin.png");
 }
 
+.logo+span {
+    font-size: 0.9rem;
+}
+
+@media only screen and (min-width: 390px) {
+    .logo+span {
+        font-size: 1rem;
+    }
+}
+
 .contact-container {
     margin-top: 30px;
     padding: 20px 20px;
     background: var(--secondary);
-}
-
-.contact-container h3{
-    margin-bottom: 5px;
 }
 
 .contact-container div {
