--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,8 @@
     --bg: #F6F8FF;
     --hover: #81E070;
     --header-height: 60px;
+    --fs-mobile: 1rem;
+    --fs-desktop: 1.25rem;
 }
 
 /* =================
@@ -27,6 +29,12 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+p,
+a {
+    font-size: var(--fs-mobile)
+}
+
+
 input, 
 button, 
 textarea {
@@ -41,6 +49,7 @@ a {
     -moz-transition: transform 0.3s ease-in-out, color 0.15s ease-in-out;
     -o-transition: transform 0.3s ease-in-out, color 0.15s ease-in-out;
     transition: transform 0.3s ease-in-out, color 0.15s ease-in-out;
+    transform-origin: left;
 }
 
 a:hover {
@@ -66,7 +75,14 @@ h3 {
 }
 /* ... */
 
+/* generic media queries */
+@media only screen and (min-width: 600px) {
+    p,
+    a {
+        font-size: var(--fs-desktop);
+    }
 
+}
 /* generic class stylings */
 .container {
     padding: 0 max(calc((100vw - 1300px) / 2 ), 10px);
@@ -74,8 +90,8 @@ h3 {
 }
 
 .image-fluid {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
   }
 
   a.anchor {
@@ -123,13 +139,23 @@ header nav
 
 .me-section picture {
     width: 50%;
+    height: 200px;
     padding-right:25px;
+    overflow: hidden;
 }
 
 .me-section picture img {
-    border-radius: 100px 100px 0% 100px;
+    border-radius: 100% 100% 100% 100%;
+    border: 1px solid var(--primary);
 }
 
+.me-section div p {
+    line-height: 2rem;
+}
+
+.icon {
+    margin-right: 5px;
+}
 
 /* Skills section */
 /* --Skills structure-- */
@@ -206,22 +232,20 @@ header nav
 .bio-section p a {
     font-weight: 600;
 }
-.bio-section p a:hover {
-    transform: scale(1);
-}
 
 /* Socials section */
 .socials-container {
     display: flex;
 }
 
-.socials-container a{
+.socials-container div{
     width: 33.333%;
+    display: flex;
+}
+.logo-container {
     display: flex;
     align-items: center;
 }
-
-
 
 .logo {
     border-radius: 50%;
@@ -249,7 +273,12 @@ header nav
 
 @media only screen and (min-width: 390px) {
     .logo+span {
-        font-size: 1rem;
+        font-size: var(--fs-mobile);
+    }
+}
+@media only screen and (min-width: 600px) {
+    .logo+span {
+        font-size: var(--fs-desktop);
     }
 }
 
@@ -273,4 +302,29 @@ header nav
     margin-right: 8px;
     display: inline-block;
     transform: translate(0, 28%)
+}
+
+/* ============
+    Keyframes
+============ */
+@keyframes wave {
+    0%, 50%, 100% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(15deg);
+    }
+    75% {
+        transform: rotate(-15deg);
+    }
+}
+
+.wave {
+    -webkit-animation: wave 2s infinite linear;
+    -moz-animation: wave 2s infinite linear;
+    -o-animation: wave 2s infinite linear;
+    animation: wave 2s infinite linear;
+    display: inline-block;
+    width:fit-content;
+    transform-origin: bottom;
 }
