--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,11 +80,6 @@ h2::before {
     z-index: -1;
 }
 
-.h2-wrapper {
-    position: relative;
-    width:fit-content;
-}
-
 h3 {
     font-size: 1.625rem;
     font-weight: 600;
@@ -98,11 +93,10 @@ h3 {
     a {
         font-size: var(--fs-desktop);
     }
-
 }
 /* generic class stylings */
 .container {
-    padding: 0 max(calc((100vw - 1300px) / 2 ), 10px);
+    padding: 0 max(calc((100vw - 1000px) / 2 ), 10px);
     margin-bottom: 20px;
 }
 
@@ -111,13 +105,17 @@ h3 {
     height: 100%;
   }
 
-  a.anchor {
+a.anchor {
     display: block;
     position: relative;
     top: calc(var(--header-height) * -1);
     visibility: hidden;
-  }
+}
 
+.h2-wrapper {
+    position: relative;
+    width:fit-content;
+}
 /* =================
     SECTIONS
 ================= */
@@ -141,7 +139,9 @@ header nav
     align-self: center;
     justify-content: space-between;
 }
-
+.main-logo {
+    font-size: 2.5rem;
+}
 .main-logo:hover {
     color:inherit;
 }
