--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,11 +100,6 @@ h3 {
     margin-bottom: 20px;
 }
 
-.image-fluid {
-    width: auto;
-    height: 100%;
-  }
-
 a.anchor {
     display: block;
     position: relative;
@@ -156,14 +151,19 @@ header nav
 
 .me-section picture {
     width: 50%;
-    height: 200px;
-    padding-right:25px;
-    overflow: hidden;
+    display: flex;
+    padding-right: 25px;
+    align-content: center;
+    justify-content: center;
 }
 
 .me-section picture img {
     border-radius: 100% 100% 100% 100%;
     border: 1px solid var(--primary);
+    width: 100%;
+    height: 100%;
+    max-width: 200px;
+    max-height: 200px;
 }
 
 .me-section div p {
