--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,10 +267,15 @@ header nav
     align-items: center;
 }
 
+.logo-container:hover {
+    transform: scale(1.2) translateX(-7px);
+}
+
 .logo {
     border-radius: 50%;
     min-width: 40px;
     height: 40px;
+    min-height: 40px;
     border: solid 1px var(--primary);
     display: inline-block;
     margin-right: 5px;
