--- a/styles/styles.css
+++ b/styles/styles.css
@@ -292,6 +292,7 @@ header nav
     background-image: url("../assets/images/linkedin.png");
 }
 
+/* Note: repsonsive adjustment */
 .logo+span {
     font-size: 0.9rem;
 }
@@ -351,7 +352,7 @@ header nav
     animation: wave 2s infinite linear;
     display: inline-block;
     width:fit-content;
-    transform-origin: bottom;
+    transform-origin: 50% 70%;
 }
 
 @keyframes rotate {
