--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,17 +69,6 @@ h2 {
     position: relative;
 }
 
-h2::before {
-    content: "";
-    position: absolute;
-    height: 0.2em;
-    width: 100%;
-    background-image: linear-gradient(120deg, var(--hover) 0%, var(--bg) 100%);
-    bottom: 5px;
-    left: 10px;
-    z-index: -1;
-}
-
 h3 {
     font-size: 1.625rem;
     font-weight: 600;
@@ -106,6 +95,17 @@ a.anchor {
     position: relative;
     top: calc(var(--header-height) * -1);
     visibility: hidden;
+}
+
+.h2-wrapper h2::before {
+    content: "";
+    position: absolute;
+    height: 0.2em;
+    width: 100%;
+    background-image: linear-gradient(120deg, var(--hover) 0%, var(--bg) 100%);
+    bottom: 5px;
+    left: 10px;
+    z-index: -1;
 }
 
 .h2-wrapper {
