--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,7 +86,8 @@ h3 {
 
 /* generic class stylings */
 .container {
-    padding: 0 max(calc((100vw - 1000px) / 2 ), 10px);
+    padding-left: max(calc((100vw - 1000px) / 2 ), 10px);
+    padding-right: max(calc((100vw - 1000px) / 2 ), 10px);
     margin-bottom: 40px;
 }
 
@@ -123,7 +124,8 @@ a.anchor {
 header {
     background-color: var(--primary);
     color: var(--bg);
-    height: 60px;
+    padding-top: 7px;
+    padding-bottom: 7px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
