add comment for css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,8 +241,8 @@ header nav
 } 
 
 .link:hover {
-    --line-d: var(--duration-line);
-    --line-x: 100%;
+    --line-d: var(--duration-line); /* set duration based on variable, make it snap back*/
+    --line-x: 100%; /* move svg bg 100% to the right --> make it visible */
     color: inherit;
 }
 
