--- a/styles/global.css
+++ b/styles/global.css
@@ -9,6 +9,7 @@
 @import './components/profile.css';
 @import './components/skills.css';
 @import './components/bio.css';
+@import './components/socials.css';
 @import './components/contact.css';
 
 @import 'styles.css';
