--- a/styles/components/profile.css
+++ b/styles/components/profile.css
@@ -27,3 +27,27 @@
 .profile__icon {
   margin-right: 5px;
 }
+
+@keyframes wave {
+  0%,
+  50%,
+  100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(15deg);
+  }
+  75% {
+    transform: rotate(-15deg);
+  }
+}
+
+.wave {
+  -webkit-animation: wave 2s infinite linear;
+  -moz-animation: wave 2s infinite linear;
+  -o-animation: wave 2s infinite linear;
+  animation: wave 2s infinite linear;
+  display: inline-block;
+  width: fit-content;
+  transform-origin: 50% 70%;
+}
