Fix skill animations

--- a/styles/components/skills.css
+++ b/styles/components/skills.css
@@ -51,7 +51,7 @@
   transition: transform var(--line-d, 0s) ease;
 }
 
-.link:hover {
+.skill__link:hover {
   --line-d: var(--duration-line); /* set duration based on variable, make it snap back*/
   --line-x: 100%; /* move svg bg 100% to the right --> make it visible */
   color: inherit;
